--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -41,9 +41,9 @@
                             <li class="lista-menu__sublista-item">
                                 <a class="container__link" th:href="@{/leisure/filtragem}"><span>Terrenos</span></a>
                             </li>
-                            <li class="lista-menu__sublista-item">
+                            <!-- <li class="lista-menu__sublista-item">
                                 <a class="container__link" th:href="@{/leisure/filtragem}"><span>Corretores</span></a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li class="lista-menu__item">
