--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -57,16 +57,22 @@
         <section class="financiamento" th:fragment="fiador">
             <div class="financiamento__container">
                 <div class="financiamento__container-imagem">
-                    <img src="/img/imagem/sem-fiador.svg" alt="...">  
+                    <img src="/img/imagem/sem-fiador.svg" alt="..."> 
                 </div>
                 <div class="financiamento__container__conteudo">
                     <h2 class="titulo__segundo">O que acha de um financiamento?</h2>
                     <p>O financiamento é uma das opções para conseguir a tão sonhada casa própria.</p>
                     <p>Veja abaixo alguns bancos que você pode simular o valor da sua casa</p>
-                    <span>
-                        <a class="no-decoration" href="#">Bradesco<i class="fa-solid fa-arrow-right"></i></a>
-                        <a class="no-decoration" href="#">Caixa<i class="fa-solid fa-arrow-right"></i></a>
-                        <a class="no-decoration" href="#">Itaú<i class="fa-solid fa-arrow-right"></i></a>
+                    <span class="financiamento__container__conteudo__links">
+                        <a class="no-decoration" href="https://banco.bradesco/html/classic/produtos-servicos/emprestimo-e-financiamento/imoveis/credito-imobiliario-aquisicao-de-imoveis.shtm" target="_blank">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/bradesco.png" alt="Financiamento com banco Bradesco">
+                        </a>
+                        <a class="no-decoration" href="https://www.caixa.gov.br/voce/habitacao/Paginas/default.aspx" target="_blank">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/caixa.png" alt="Financiamento com banco Caixa">
+                        </a>
+                        <a class="no-decoration" href="https://credito-imobiliario.itau.com.br/" target="_blank">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/itau.png" alt="Financiamento com banco Caixa">
+                        </a>
                     </span>
                 </div>
             </div>
