--- a/leisure/src/main/resources/static/style/index-financiamento.css
+++ b/leisure/src/main/resources/static/style/index-financiamento.css
@@ -42,6 +42,18 @@
     color: var(--cor-font-principal);
 }
 
+.financiamento__container__conteudo__links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    column-gap: 2em;
+}
+
+.financiamento__container__conteudo__imagem {
+    width: 100px;
+}
+
 @media (min-width: 768px) {
 
     .financiamento {
@@ -52,5 +64,9 @@
         display: flex;
         flex-direction: row;
         text-align: center;
+    }
+
+    .financiamento__container__conteudo__links {
+        flex-direction: row;
     }
 }
