Alterações no html para funcionar a classe de testes

--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -123,7 +123,7 @@
                             </div>
                             <div class="modal-body__botoes d-flex flex-column gap-2 justify-content-center">
                                 <button type="submit" class="btn btn-primary">Cadastrar</button>
-                                <span class="btn-login">Já tenho cadastro</span>
+                                <span class="btn-login" name="tenhoLogin">Já tenho cadastro</span>
                             </div>
                         </form>
                     </div>
