--- a/leisure/src/main/resources/templates/fragments/botoes.html
+++ b/leisure/src/main/resources/templates/fragments/botoes.html
@@ -1,6 +1,6 @@
 <div th:fragment="login" th:if="${usuario == null}" class="container__usuario" data-bs-toggle="modal" data-bs-target="#exampleModal">
     <i class="fa-light fa-circle-user fa-2xl"></i>
-    <span>Entrar</span>
+    <span name="Entrar">Entrar</span>
 </div>
 
 <div th:fragment="logout" th:if="${usuario != null}" class="container__usuario logout">
