--- a/leisure/src/main/resources/templates/perfil.html
+++ b/leisure/src/main/resources/templates/perfil.html
@@ -20,6 +20,6 @@
 
     <!-- RODAPE -->
     <footer th:replace="~{fragments/rodape :: rodape}"></footer>
-
+    <div role="alert">Teste bem sucedido!</div>
 </body>
 </html>
