--- a/leisure/src/main/resources/static/style/index-destaques.css
+++ b/leisure/src/main/resources/static/style/index-destaques.css
@@ -32,7 +32,7 @@
 
 @media (min-width: 768px) {
     .destaques {
-        margin: 5em 10em;
+        margin: 5em 8vw;
     }
 
     .destaques__container {
