--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -95,6 +95,7 @@
             </div>
         </section>
 
+        <!-- SOBRE A LEISURE -->
         <section id="sobre" class="sobre">
             <h2 class="titulo__segundo">Sobre a Leisure imóveis</h2>
             <div class="sobre__conteudo">
@@ -157,6 +158,7 @@
             </div>  
         </section>
 
+        <!-- TIME LEISURE -->
         <section id="time" class="time">
             <h3 class="titulo__terceiro">Nosso time</h3>
             <div class="swiper">
