--- a/leisure/src/main/resources/static/style/index-time.css
+++ b/leisure/src/main/resources/static/style/index-time.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     width: auto;
-    min-height: 250px;
+    height: 300px;
     text-align: center;
     /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); */
     box-shadow: var(--cor-sombra);
