- Ajustes no campo de pesquisa; - adicionado a descricao no anuncio - adicionado botao para chat no anuncio

--- a/leisure/src/main/resources/static/style/anuncio-filtro.css
+++ b/leisure/src/main/resources/static/style/anuncio-filtro.css
@@ -145,6 +145,7 @@
         box-shadow: none;
         border-radius: 0;
         position: absolute;
+        max-width: 50vw;
         height: 100vh;
         left: 0;
         top: 6em;
