--- a/leisure/src/main/resources/templates/anuncio.html
+++ b/leisure/src/main/resources/templates/anuncio.html
@@ -71,13 +71,14 @@
                     <div class="filtro__filtro-conteudo">
                         <label>
                             <span>Quartos</span>
-                            <select class="filtro__filtro-item" name="numQuartos">
+                            <input class="filtro__filtro-conteudo-item" type="text" name="numQuartos" id="pesquisaQuartos" placeholder="Quartos">
+                            <!-- <select class="filtro__filtro-item" name="numQuartos">
                                 <option value="" selected></option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
                                 <option value="4">+4</option>
-                            </select>
+                            </select> -->
                         </label>
                     </div>
                     <div class="filtro__filtro-botao">
