--- a/leisure/src/main/resources/templates/fragments/pesquisa.html
+++ b/leisure/src/main/resources/templates/fragments/pesquisa.html
@@ -38,12 +38,13 @@
                     </div>
                     <div class="pesquisa__container__formulario-conteudo">
                         <span>Quartos</span>
-                        <select name="numQuartos" id="pesquisaQuartos">
+                        <input type="text" name="numQuartos" id="pesquisaQuartos" placeholder="Quartos">
+                        <!-- <select name="numQuartos" id="pesquisaQuartos">
                             <option value="1">1</option>
                             <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="+4">+4</option>
-                        </select>
+                        </select> -->
                     </div>
                 </label>
             </div>
