--- a/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
+++ b/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
@@ -22,8 +22,15 @@
                             <li>• <span th:text="${imovel.vagasGaragem}"></span> vaga</li>
                             <!-- <li>• IPTU R$<span th:text="${imovel.iptu}"></span>,00</li> -->
                         </ul>
-                        <p class="resultado__filtro__card__conteudo__content__item__comodos">
-                        </p>
+                        <ul class="resultado__filtro__card__conteudo__content__lista">
+                            <li>• <span th:text="${imovel.descricao}"></span></li>
+                        </ul>
+                    </span>
+                    <span class="esultado__filtro__card__conteudo__content__contato">
+                        <a href="web.whatsapp.com" target="_blank">
+                            <i class="fa-brands fa-whatsapp fa-xl"></i>
+                            <span>Falar com vendedor</span>
+                        </a>
                     </span>
                 </div>
             </div>
