--- a/leisure/src/main/resources/static/style/anuncio-resultado.css
+++ b/leisure/src/main/resources/static/style/anuncio-resultado.css
@@ -34,7 +34,11 @@
 .resultado__filtro__card__conteudo__content {
     display: flex;
     flex-direction: column;
-    row-gap: 1em;
+    margin: 0.5em 0;
+    row-gap: 0.5em;
+}
+
+.esultado__filtro__card__conteudo__content__item {
     margin: 0.5em 0;
 }
 
@@ -49,8 +53,28 @@
 .resultado__filtro__card__conteudo__content__lista {
     display: flex;
     column-gap: 1em;
+    margin: 0.75em 0;
 }
 
+.esultado__filtro__card__conteudo__content__contato {
+    padding: 1em 0;
+    text-align: center;
+}
+
+.esultado__filtro__card__conteudo__content__contato a{
+    background-color: var(--cor-hover);
+    border-radius: 1em;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color: #11ee8e;
+    transition: 0.3s;
+
+}
+.esultado__filtro__card__conteudo__content__contato a:hover{
+    background-color: var(--cor-primeira);
+    color: #07d27a;
+    transition: 0.3s;
+}
 
 @media (min-width: 768px) {
     .resultado__pesquisa {
