--- a/leisure/src/main/resources/static/style/index-time.css
+++ b/leisure/src/main/resources/static/style/index-time.css
@@ -21,9 +21,8 @@
     display: flex;
     flex-direction: column;
     width: auto;
-    height: 300px;
+    height: auto;
     text-align: center;
-    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.8); */
     box-shadow: var(--cor-sombra);
     border-radius: 5px;
     padding: 0 0.5em 2.5em 0.5em;
