Ajustes na pagina profile - adicionado disabled em alguns campos dos meus dados. - adicionado efeito de hover no anunciar caso o usuario ainda não possua anuncios.

--- a/leisure/src/main/resources/static/style/profile-anuncio.css
+++ b/leisure/src/main/resources/static/style/profile-anuncio.css
@@ -92,6 +92,12 @@
 
 .anuncio__container__mensagem__link {
     color: var(--cor-font-principal);
+    transition: 0.3s;
+}
+
+.anuncio__container__mensagem__link:hover {
+    color: var(--cor-segunda);
+    transition: 0.3s;
 }
 
 
