--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -360,11 +360,11 @@
         <div class="meusdados__container__form">
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosNome">Nome completo:</label>
-                <input type="text" name="nome" id="meusdadosNome" th:value="${usuario.nome}">
+                <input type="text" name="nome" id="meusdadosNome" th:value="${usuario.nome}" disabled>
             </div>
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosData">Data de nascimento:</label>
-                <input type="date" name="data" id="meusdadosData" th:value="${usuario.data}">
+                <input type="date" name="data" id="meusdadosData" th:value="${usuario.data}" disabled>
             </div>
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosEmail">E-mail:</label>
@@ -373,11 +373,11 @@
 
             <div class="meusdados__container__conteudo">
                 <label for="dadoTelefone">Telefone:</label>
-                <input type="tel" name="telefone" id="dadoTelefone" th:value="${usuario.telefone}">
+                <input type="tel" name="telefone" id="dadoTelefone" th:value="${usuario.telefone}" maxlength="15" >
             </div>
             <div class="meusdados__container__conteudo">
                 <label for="meusdadosCpf">CPF</label>
-                <input type="password" name="cpf" id="meusdadosCpf" th:value="${usuario.cpf}" disabled>
+                <input type="text" name="cpf" id="meusdadosCpf" th:value="${usuario.cpf}" maxlength="14" disabled>
             </div>
         </div>
         <!-- <input name="id" th:value="${usuario.id}" id="id_usuario" hidden> -->
