Ajustes na index - reajustado icones de financiamento

--- a/leisure/src/main/resources/templates/index.html
+++ b/leisure/src/main/resources/templates/index.html
@@ -65,13 +65,13 @@
                     <p>Veja abaixo alguns bancos que você pode simular o valor da sua casa</p>
                     <span class="financiamento__container__conteudo__links">
                         <a class="no-decoration" href="https://banco.bradesco/html/classic/produtos-servicos/emprestimo-e-financiamento/imoveis/credito-imobiliario-aquisicao-de-imoveis.shtm" target="_blank">
-                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/bradesco.png" alt="Financiamento com banco Bradesco">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/bradesco.svg" alt="Financiamento com banco Bradesco">
                         </a>
                         <a class="no-decoration" href="https://www.caixa.gov.br/voce/habitacao/Paginas/default.aspx" target="_blank">
-                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/caixa.png" alt="Financiamento com banco Caixa">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/caixa.svg" alt="Financiamento com banco Caixa">
                         </a>
                         <a class="no-decoration" href="https://credito-imobiliario.itau.com.br/" target="_blank">
-                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/itau.png" alt="Financiamento com banco Caixa">
+                            <img class="financiamento__container__conteudo__imagem" src="/img/imagem/itau.svg" alt="Financiamento com banco Caixa">
                         </a>
                     </span>
                 </div>
